function high order

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     
     <h1>Hello World</h1>
-  
-   
-    <script src="js/repaso.js"></script>
+    <button id="btn">press me</button>
+    <input type="text" id="txt">
+   <div id="contenedor"></div>
+    <script src="js/repaso2.js"></script>
 </body>
 </html>
