--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
     
-    <h1>Hello World</h1>
-    <button id="btn">press me</button>
-    <input type="text" id="txt">
-   <div id="contenedor"></div>
-    <script src="js/repaso2.js"></script>
+    
+    <script src="js/data.js"></script>
 </body>
 </html>
