--- a/index.html
+++ b/index.html
@@ -8,8 +8,29 @@
     <title>Document</title>
 </head>
 <body>
+    <h2 id="titulo">Curso FrontEnd 2025</h2>
     
+    <div id="container"></div>
+
+    <p id="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptatibus cumque a temporibus cupiditate impedit et laudantium reprehenderit sint laboriosam. Delectus similique, eius culpa dolor dignissimos magni in doloremque? Temporibus?</p>
     
-    <script src="js/data.js"></script>
+    <ul>
+        <li class="paises">Argentina</li>
+        <li class="paises">Brasil</li>
+        <li class="paises">Colombia</li>
+        <li class="paises">Chile</li>
+        <li class="paises">Peru</li>
+        <li class="paises">Uruguay</li>
+        <li class="paises">Venezuela</li>
+    </ul>
+
+    <div>
+        <p class="paises">Jorgito</p>
+    </div>
+
+    <h1 id="insertar">
+        Esto es un nodo
+    </h1>
+    <script src="js/dom.js"></script>
 </body>
 </html>
